--- a/nonlinear plot.Rmd
+++ b/nonlinear plot.Rmd
@@ -61,7 +61,7 @@ rownames(var)<-c('40','120','480','1200','4800')
 colnames(var)<-c("DGP", "DJ","CF")
 par(mar=c(par('mar')[1:3], 0)) 
 plot.new()
-l <- legend(0, 0, bty='n',c("Data generating process", "Disjoint method","Proposed method"),plot=FALSE, pch=1:3,col=1:3)
+l <- legend(0, 0, bty='n',c("DGP", "DJ","PM"),plot=FALSE, pch=1:3,col=1:3)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n",yaxt = "n"
@@ -70,7 +70,7 @@ title(ylab = 'percetage profit loss',line=3.3, cex.lab=1.2)
 axis(1, at=1:5, labels=x_axis)
 axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("Data generating process", "Disjoint method","Proposed method"), pch=1:3,col=1:3)
+       ,c("DGP", "DJ","PM"), pch=1:3,col=1:3)
 
 ```
 
@@ -108,7 +108,7 @@ rownames(var)<-c('40','120','480','1200','4800')
 colnames(var)<-c("DGP", "DJ","CF")
 par(mar=c(par('mar')[1:3], 0)) 
 plot.new()
-l <- legend(0, 0, bty='n',c("Data generating process", "Disjoint method","Proposed method"),plot=FALSE, pch=1:3,col=1:3)
+l <- legend(0, 0, bty='n',c("DGP", "DJ","PM"),plot=FALSE, pch=1:3,col=1:3)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n"
@@ -116,6 +116,6 @@ matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n"
 abline(h=0.56,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("Data generating process", "Disjoint method","Proposed method"), pch=1:3,col=1:3)
+       ,c("DGP", "DJ","PM"), pch=1:3,col=1:3)
 
 ```
