--- a/main_file.tex
+++ b/main_file.tex
@@ -247,7 +247,7 @@ Moreover, we use the results of the exact model and parameters from DGP to be ou
     \item Fill Rate ($FR=\frac{\min\{\hat{Q}_{s+1},y_{s+1}\}}{y_{s+1}}$).
 \end{enumerate}
 
-The results are presented in tables and figures. Figure \ref{fig:ppl0.3} represents the average percentage profit loss of methods where target service level $=0.3$. DGP denotes the exact ARIMA model and parameters from data generating process, DJ denotes the disjoint method, QR denotes the quantile regression method, and CF denotes our proposed method. We can see both the proposed method and the benchmark methods converge to DGP when data size grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. However, when the data size is small, the disjoint method performed slightly better than the quantile regression method and the proposed method. 
+The results are presented in tables and figures. Figure \ref{fig:ppl0.3} represents the average percentage profit loss of methods where target service level $=0.3$. DGP denotes the exact ARIMA model and parameters from data generating process, DJ denotes the disjoint method, QR denotes the quantile regression method, and PM denotes our proposed method. We can see both the proposed method and the benchmark methods converge to DGP when data size grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. However, when the data size is small, the disjoint method performed slightly better than the quantile regression method and the proposed method. 
 
 \begin{figure}[ht]
 \centering
