--- a/runif plot.Rmd
+++ b/runif plot.Rmd
@@ -60,14 +60,14 @@ colnames(var)<-c("DGP", "DJ","CF")
 var
 par(mar=c(par('mar')[1:3], 0)) 
 plot.new()
-l <- legend(0, 0, bty='n',c("DGP", "DJ","CF"),plot=FALSE, pch=1:3,col=1:3)
+l <- legend(0, 0, bty='n',c("DGP", "DJ","PM"),plot=FALSE, pch=1:3,col=1:3)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n"
         ,xlab = 'data length',ylab = 'percetage profit loss') 
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","CF"), pch=1:3,col=1:3)
+       ,c("DGP", "DJ","PM"), pch=1:3,col=1:3)
 
 ```
 
@@ -109,13 +109,13 @@ colnames(var)<-c("DGP", "DJ","CF")
 var
 par(mar=c(par('mar')[1:3], 0)) 
 plot.new()
-l <- legend(0, 0, bty='n',c("DGP", "DJ","CF"),plot=FALSE, pch=1:3,col=1:3)
+l <- legend(0, 0, bty='n',c("DGP", "DJ","PM"),plot=FALSE, pch=1:3,col=1:3)
 w <- grconvertX(l$rect$w, to='ndc') - grconvertX(0, to='ndc')
 par(omd=c(0, 1-w, 0, 1))
 matplot(mac, type = c("b"),pch=1:3,col = 1:3,xaxt = "n"
         ,xlab = 'data length',ylab = 'service level') 
 axis(1, at=1:5, labels=x_axis)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
-       ,c("DGP", "DJ","CF"), pch=1:3,col=1:3)
+       ,c("DGP", "DJ","PM"), pch=1:3,col=1:3)
 
 ```
