--- a/main_file.tex
+++ b/main_file.tex
@@ -252,7 +252,7 @@ The results are presented in tables and figures. Figure \ref{fig:ppl0.3} represe
 \begin{figure}[ht]
 \centering
 \caption{Percentage profit loss vs. data size at 0.3 target service level}
-\includegraphics{ppl0.3-1.pdf}
+\includegraphics{linear-norm-plot_files/figure-latex/ppl0.3-1.pdf}
 \label{fig:ppl0.3}
 \end{figure}
 
@@ -261,7 +261,7 @@ Figure \ref{fig:sl0.3} represent the proportion of iterations that the demand is
 \begin{figure}[ht]
 \centering
 \caption{Service level vs. data size at 0.3 target service level}
-\includegraphics{sl-3.pdf}
+\includegraphics{linear-norm-plot_files/figure-latex/sl-3.pdf}
 \label{fig:sl0.3}
 \end{figure}
 
@@ -377,6 +377,22 @@ The results can be seen in Figure \ref{fig:non}. We can see that the percentage 
 \subsection{Error term misspecification}
 In this subsection, we are interested in explore the behavior of our proposed method in the scenario where the error term is misspecified. Particularly, we generate our data from ARIMA $(1,0,0)(1,0,0)_4$ with error term follows Laplace$(0,141)$. Therefore, the mean and variance will be as same as $\mathcal{N}(0,200^2)$. As before, we assume that the model of the data generating process is known, and the underlying profit function is linear where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$. However, we fail to know the true distribution of the error term, and still assume it follows normal distribution $\mathcal{N}(0,200^2)$.
 
+\begin{figure}[ht]
+\centering
+\caption{Performance vs. data size with Laplace distributed error term}
+\begin{subfigure}[b]{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{runif-plot_files/figure-latex/unnamed-chunk-1-1.pdf}
+\caption{percentage profit loss vs. data size}
+\end{subfigure}
+\hfill
+\begin{subfigure}[b]{0.48\textwidth}
+\centering
+\includegraphics[width=\textwidth]{}
+\caption{service level vs. data size}
+\end{subfigure}
+\label{fig:non}
+\end{figure}
 
 \section{Concluding Remarks} \label{se:end}
 This paper presents the framework of a new integrated approach to NVPs. The method is flexible, and doesn't make assumptions about demand distribution nor the solution of profit function. It could generate stable outcomes even in the case we possess misleading information or make wrong assumptions.
