--- a/runif-plot.tex
+++ b/runif-plot.tex
@@ -230,9 +230,10 @@
 \NormalTok{l <-}\StringTok{ }\KeywordTok{legend}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{0}\NormalTok{, }\DataTypeTok{bty=}\StringTok{'n'}\NormalTok{,}\KeywordTok{c}\NormalTok{(}\StringTok{"DGP"}\NormalTok{, }\StringTok{"DJ"}\NormalTok{,}\StringTok{"PM"}\NormalTok{),}\DataTypeTok{plot=}\OtherTok{FALSE}\NormalTok{, }\DataTypeTok{pch=}\DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{,}\DataTypeTok{col=}\DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{)}
 \NormalTok{w <-}\StringTok{ }\KeywordTok{grconvertX}\NormalTok{(l}\OperatorTok{$}\NormalTok{rect}\OperatorTok{$}\NormalTok{w, }\DataTypeTok{to=}\StringTok{'ndc'}\NormalTok{) }\OperatorTok{-}\StringTok{ }\KeywordTok{grconvertX}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DataTypeTok{to=}\StringTok{'ndc'}\NormalTok{)}
 \KeywordTok{par}\NormalTok{(}\DataTypeTok{omd=}\KeywordTok{c}\NormalTok{(}\DecValTok{0}\NormalTok{, }\DecValTok{1}\OperatorTok{-}\NormalTok{w, }\DecValTok{0}\NormalTok{, }\DecValTok{1}\NormalTok{))}
-\KeywordTok{matplot}\NormalTok{(mac, }\DataTypeTok{type =} \KeywordTok{c}\NormalTok{(}\StringTok{"b"}\NormalTok{),}\DataTypeTok{pch=}\DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{,}\DataTypeTok{col =} \DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{,}\DataTypeTok{xaxt =} \StringTok{"n"}
+\KeywordTok{matplot}\NormalTok{(mac, }\DataTypeTok{type =} \KeywordTok{c}\NormalTok{(}\StringTok{"b"}\NormalTok{),}\DataTypeTok{pch=}\DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{,}\DataTypeTok{col =} \DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{,}\DataTypeTok{xaxt =} \StringTok{"n"}\NormalTok{,}\DataTypeTok{yaxt =} \StringTok{"n"}
 \NormalTok{        ,}\DataTypeTok{xlab =} \StringTok{'data length'}\NormalTok{,}\DataTypeTok{ylab =} \StringTok{'percetage profit loss'}\NormalTok{) }
 \KeywordTok{axis}\NormalTok{(}\DecValTok{1}\NormalTok{, }\DataTypeTok{at=}\DecValTok{1}\OperatorTok{:}\DecValTok{5}\NormalTok{, }\DataTypeTok{labels=}\NormalTok{x_axis)}
+\KeywordTok{axis}\NormalTok{(}\DecValTok{2}\NormalTok{, }\DataTypeTok{at=}\KeywordTok{pretty}\NormalTok{(y_axis), }\DataTypeTok{lab=}\KeywordTok{paste0}\NormalTok{(}\KeywordTok{pretty}\NormalTok{(y_axis) }\OperatorTok{*}\StringTok{ }\DecValTok{100}\NormalTok{, }\StringTok{"%"}\NormalTok{), }\DataTypeTok{las=}\OtherTok{TRUE}\NormalTok{)}
 \KeywordTok{legend}\NormalTok{(}\KeywordTok{par}\NormalTok{(}\StringTok{'usr'}\NormalTok{)[}\DecValTok{2}\NormalTok{], }\KeywordTok{par}\NormalTok{(}\StringTok{'usr'}\NormalTok{)[}\DecValTok{4}\NormalTok{], }\DataTypeTok{bty=}\StringTok{'n'}\NormalTok{, }\DataTypeTok{xpd=}\OtherTok{NA}
 \NormalTok{       ,}\KeywordTok{c}\NormalTok{(}\StringTok{"DGP"}\NormalTok{, }\StringTok{"DJ"}\NormalTok{,}\StringTok{"PM"}\NormalTok{), }\DataTypeTok{pch=}\DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{,}\DataTypeTok{col=}\DecValTok{1}\OperatorTok{:}\DecValTok{3}\NormalTok{)}
 \end{Highlighting}
