--- a/novel.bib
+++ b/novel.bib
@@ -454,7 +454,8 @@
 @article{HNS15,
   author = {Harsha, Pavithra and Natarajan, Ramesh and Subramanian, Dharmashankar},
   year = {2015},
-  title = {A data-driven, distribution-free, multivariate approach to the price-setting newsvendor problem},
+  title = {A data-driven, 
+  distribution-free, multivariate approach to the price-setting newsvendor problem},
   publisher = {Working paper, IBM TJ Watson Research Center, Yorktown Heights, NY}
 }
 
@@ -544,4 +545,15 @@ pages = {1296--1310},
 publisher = {Taylor {\&} Francis},
 volume = {94},
 year = {1999}
+}
+
+@article{LN89,
+author = {Liu, Dong C and Nocedal, Jorge},
+title = {{On the limited memory BFGS method for large scale optimization}},
+doi = {10.1007/BF01589116},
+issn = {1436-4646},
+journal = {Mathematical Programming},
+url = {https://doi.org/10.1007/BF01589116},
+volume = {45},
+year = {1989}
 }
