--- a/main_file.tex
+++ b/main_file.tex
@@ -233,21 +233,21 @@ The parameters of three profit functions are:
     \item $p=20$, $v=8$, $c_h=3$, $c_s=7$
     \item $p=20$, $v=10$, $c_h=-3$, $c_s=-7$
 \end{enumerate}
-}, and five data sizes (40,120,480,1200,4800) in order to see how the proposed method performs when the target service level and/or the learning period varies.
+}, and five data sizes (40,120,480,1200,4800) in order to see how the proposed method performs when the target service level and/or the learning period vary.
 
-In the experiment, we use seasonal dummies and lag term 1 and 4 as explanatory variables for the proposed method. Besides, two benchmark methods are selected to compare performance with:
+In the experiment, we use seasonal dummies and lag term 1 and 4 as explanatory variables for the proposed method. Moreover, we use Limited-memory BFGS \cite{LN89} as the optimisation algorithm for $\hat{\boldsymbol{\beta}}$ computing. Besides the proposed method, two benchmark methods are selected to compare performance with:
 \begin{itemize}
-    \item Disjoint method that use ARIMA $(1,0,0)(1,0,0)_4$ to forecast in the first phase and determine the optimal quantile from the profit function in the second phase,
+    \item Disjoint method that use ARIMA $(1,0,0)(1,0,0)_4$ to fit in the first phase and determine the optimal quantity by solving the profit function in the second phase,
     \item Integrated method that use Quantile Regression with seasonal dummies and lag term 1 and 4 as explanatory variables.
 \end{itemize}
-Moreover, we use the results of the exact model and parameters from DGP to be our upper bound. We build the proposed method and benchmark methods based on the given data set, and compare their performance on the $1$-step ahead forecast. The comparison of performance includes:
+Moreover, we use the exact model and parameters from DGP to perform a forecast and use it as bound. We build the proposed method and benchmark methods based on the given data-set, and compare their performance on the $1$-step ahead forecast. The comparison of performance includes:
 \begin{enumerate}
     \item Percentage Profit Loss ($PPL=\frac{\pi(y_{s+1},y_{s+1})-\pi(\hat{Q}_{s+1},y_{s+1})}{\pi(y_{s+1},y_{s+1})}$),
     \item Service Level ($SL=\mathbb {I}_{(\hat{Q}_{s+1}>y_{s+1})}$),
     \item Fill Rate ($FR=\frac{\min\{\hat{Q}_{s+1},y_{s+1}\}}{y_{s+1}}$).
 \end{enumerate}
 
-The results are presented in tables and figures. Figure \ref{fig:ppl0.3} represents the average percentage profit loss of methods where target service level $=0.3$. DGP denotes the exact ARIMA model and parameters from data generating process, DJ denotes the disjoint method, QR denotes the quantile regression method, and PM denotes our proposed method. We can see both the proposed method and the benchmark methods converge to DGP when data size grows. Besides, the performance of our proposed method and quantile regression is very similar. This is exactly what we expected base on the transformation property we proved in Section \ref{se:new}. However, when the data size is small, the disjoint method performed slightly better than the quantile regression method and the proposed method. 
+The results are presented in tables and figures.\footnote{See appendix for figures that not included here.} Figure \ref{fig:ppl0.3} represents the average percentage profit loss of methods where target service level $=0.3$. DGP denotes the exact ARIMA model and parameters from data generating process, DJ denotes the disjoint method, QR denotes the quantile regression method, and PM denotes our proposed method. We can see both the proposed method and the benchmark methods converge to DGP when data size grows. Besides, the performance of our proposed method and quantile regression are very similar. This is exactly what we expected since we have proved the proposed mehod can be reduced to quantile regression in Section \ref{se:new}. However, when the data size is small, the disjoint method performed slightly better than the quantile regression method and the proposed method. 
 
 \begin{figure}[ht]
 \centering
@@ -256,7 +256,7 @@ The results are presented in tables and figures. Figure \ref{fig:ppl0.3} represe
 \label{fig:ppl0.3}
 \end{figure}
 
-Figure \ref{fig:sl0.3} represent the proportion of iterations that the demand is satisfied (e.g. 0.32 means the demand are satisfied in 6,400 of the 20,000 iterations). We can see that both the three methods and the DGP converge to the target service level 0.3 when data length grows. Yet, the disjoint method approaches the target service level from lower side while the proposed method and the quantile regression approach it from upper side. This phenomenon could be explained by the difference in mechanisms of the disjoint method and integrated method. The disjoint method forecasts the mean and variance of the demand distribution in the first phase. When the data size is small, the forecasted variance will be much bigger than the true variance. The variance, however, plays important role in determining quantile in the second phase. Therefore, bigger variance makes the solution of the optimal quantity 'far away' from 0.5, which leads to lower service level than target. On the other hand, the integrated method approaches the true optimal quantity by applying the optimisation algorithm directly on total profit. Therefore, even if there are two quantity value that have equal distance from the optimal quantity, the algorithm will always favor the one with better profit. In this particular profit function, the algorithm will always favor the quantity with higher service level.
+Figure \ref{fig:sl0.3} represents the proportion of iterations that the demand is satisfied (e.g. 0.32 means the demand are satisfied in 6,400 of the 20,000 iterations). We can see that both the three methods and the DGP converge to the target service level 0.3 when data length grows. Yet, the disjoint method approaches the target service level from lower side while the proposed method and the quantile regression approach it from upper side. This phenomenon could be explained by the difference in mechanisms of the disjoint method and integrated method. The disjoint method estimates the mean and variance of the demand distribution in the first phase. When the data size is small, the estimated variance will be much bigger than the true variance. The variance, however, plays important role in determining quantile in the second phase. Therefore, big variance makes the solution of the optimal quantity 'far away' from 0.5, which leads to lower service level than target. On the other hand, the integrated method approaches the true optimal quantity by applying the optimisation/heuristic algorithm directly on total profit. Therefore, even if there are two quantities that equally distanced from the optimal quantity, the algorithm will always favor the one with better profit. In this particular profit function, the algorithm will always favor the quantity with higher service level.
 
 \begin{figure}[ht]
 \centering
@@ -265,7 +265,7 @@ Figure \ref{fig:sl0.3} represent the proportion of iterations that the demand is
 \label{fig:sl0.3}
 \end{figure}
 
-By fixing the target service level, we can compare the performance of methods in different data size in Table \ref{tab:size_effect0.3}. The value in columns of percentage profit loss and service level are in line with the results in Figure \ref{fig:ppl0.3} and Figure \ref{fig:sl0.3}. The columns of fill rate, on the other hand, provide us more information about demand fulfilment. The service level represents the proportion of iterations that the demand is satisfied, while the fill rate not only provides whether the demand is satisfied or not, but also provides in what percentage the demand is filled. In the case demand is not satisfied, it is well expected that the gap of inventory is as small as possible. In Table \ref{tab:size_effect0.3}, we can see that the proposed method maintains a very high fill rate in all data size. 
+By fixing the target service level, we can compare the performance of methods in different data size in Table \ref{tab:size_effect0.3}. The value in columns of percentage profit loss and service level are in line with the results in Figure \ref{fig:ppl0.3} and Figure \ref{fig:sl0.3}. The columns of fill rate, on the other hand, provide us more information about demand fulfilment. The service level represents the proportion of iterations that the demand is satisfied, while the fill rate not only provides whether the demand is satisfied or not, but also provides in what percentage the demand is filled. In the case demand is not satisfied, it is well expecting that the gap of inventory is as small as possible. In Table \ref{tab:size_effect0.3}, we can see that the proposed method maintains a very high fill rate in all data size. 
 
 \begin{table}[ht]
 \caption{Size effect at 0.3 target service level}
@@ -286,7 +286,7 @@ Data size & DGP & disjoint & quantile & proposed & DGP & disjoint & quantile & p
 \end{tabular}} 
 \end{table}
 
-On the other hand, we can also compare the methods' performance regarding to different target service levels while fix the data size as in Table \ref{tab:level_effect40} and Table \ref{tab:level_effect4800}, which represent the case data is insufficient and the case data is abundant, respectively. We can see that in both tables, the percentage profit loss of all methods is particular high at 0.63 target service level. It is due to the opportunity cost is different in each profit function. In the function at 0.63 target service level, the 'underage' cost is 19 and the 'overage' cost is 11. However, in the function at 0.3 target service level, those costs are 3 and 7. This high opportunity cost leads to severe overstock/understock punishment, and affects percentage profit loss. As we can see in Table \ref{tab:level_effect4800}, all methods perform similarly when data is sufficient. This result is in line with Figure \ref{fig:ppl0.3} and Figure \ref{fig:sl0.3} where target service level is 0.3. In Table \ref{tab:level_effect40}, where the data size is small, we can see that both the proposed method and benchmarks methods generate acceptable percentage profit loss compared with DGP. Yet, the service level of disjoint method is very poor in all cases. This phenomenon is in line with the findings from Figure \ref{fig:sl0.3}.
+On the other hand, we can also compare the methods' performance regarding to different target service levels while fix the data size as in Table \ref{tab:level_effect40} and Table \ref{tab:level_effect4800}, which represent the case data is insufficient and the case data is abundant, respectively. We can see that in both tables, the percentage profit loss of all methods is particular high at 0.63 target service level. It is due to the opportunity cost is different in each profit function. In the function with 0.63 target service level, the 'underage' cost is 19 and the 'overage' cost is 11. However, in the function with 0.3 target service level, those costs are 3 and 7. Those high opportunity costs lead to severe overstock/understock punishment, and affects percentage profit loss. As we can see in Table \ref{tab:level_effect4800}, all methods perform similarly when data is sufficient. This result is in line with Figure \ref{fig:ppl0.3} and Figure \ref{fig:sl0.3} where target service level is 0.3. In Table \ref{tab:level_effect40}, where the data size is small, we can see that both the proposed method and benchmarks methods generate acceptable percentage profit loss compared with DGP. Yet, the service level of disjoint method is very poor in all cases. This result is in line with the findings from Figure \ref{fig:sl0.3}.
 
 \begin{table}[ht]
 \caption{Target service level effect on percentage profit loss and service level at 40 data size}
@@ -331,9 +331,9 @@ In this subsection, we consider the scenario where the error term of the demand 
             20y-8Q-4(Q-y)+5\E[\min \{(Q-y),u\}],& \text{if } Q\geq y\\
             20Q-8Q-0.01(y-Q)^2,& \text{if } Q< y,
         \end{cases}$ and $u\sim \mathcal{N}(30,5^2)$} (solution see \cite{KK18}).
-In this scenario, we explore how the performance changes on both the proposed method and the disjoint method when we alter the profit function to nonlinear. We don't have to make any change to the proposed method, since it makes no assumption to the solution of profit function. However, a simulation algorithm will be used in order to generate the optimal quantile solution of the profit function for the disjoint method. The disjoint method will still be operated in two phases. Mean and variance of the demand will be forecasted in the first phase, and the approximated quantile 0.56 will be used to generate the optimal quantity in the second phase. In the experiment, both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
+In this scenario, we explore how the performance changes on both the proposed method and the disjoint method when we use complex profit function. We don't have to make any change on the proposed method to fit in the experiment, since it makes no assumption to the solution of profit function. However, we need to design a method to solve the optimal quantity of the profit function numerically for the disjoint method. In this case, a simulation algorithm is used and the optimal quantile is approximated to be 0.56. In the experiment, both the percentage profit loss and the service level will be concerned. The data will still be generated from ARIMA $(1,0,0)(1,0,0)_4$ process, and we use the performance of DGP to compare with both methods. 
 
-The results can be seen in Figure \ref{fig:non}. We can see that the percentage profit loss of the proposed method is very similar to that of the disjoint method in every data size. Regarding to the service level, the proposed method can easily approach the target service level when the data size is small, while the disjoint method needs more data to reach the target service level. Moreover, the proposed method doesn't need any numerical methods or simulation methods to solve for the optimal quantile solution of the profit function. Therefore, it generally requires less computational time.
+The results can be seen in Figure \ref{fig:non}. We can see that the percentage profit loss of the proposed method is very similar to that of the disjoint method in every data size. Regarding to the service level, the proposed method can easily approach the target service level when the data size is small, while the disjoint method needs more data to reach the target service level. Moreover, the proposed method doesn't need any numerical approaches or simulation methods to solve for the optimal quantity solution of the profit function. Therefore, it generally requires less computational time.
 
 \begin{figure}[ht]
 \centering
@@ -357,7 +357,7 @@ The results can be seen in Figure \ref{fig:non}. We can see that the percentage 
 In this subsection, we consider the performance of our proposed method, compared with the disjoint method, in the scenario where we possess misleading information. 
 
 
-We first consider misleading DGP model, where the data is still generated from ARIMA $(1,0,0)(1,0,0)_4$ model, but two misleading model information are given, AR$(1)$ and ARIMA $(2,0,0)(1,0,0)_4$. To fairly compare performance with those two disjoint model, we use lag term 1 as explanatory variable for the proposed method in first model and lag term 1, 2, 4 as explanatory variable for the proposed method in second model. As in the previous scenario, the error term of the demand follows normal distribution. In this experiment, we use a linear profit function where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$, and fix the target service level to be 0.3. The percentage profit loss of different data size for the misleading model can be seen in Figure \ref{fig:mis}. It is clear that both the disjoint method and our proposed integrated method generate high percentage profit loss in all data size when the misleading model is AR$(1)$. Obviously, short of explanatory variables makes the forecasting less accurate. In the case where misleading model is ARIMA $(2,0,0)(1,0,0)_4$, our forecasting methods can capture the structure when data is sufficient. However, we can see that when data size is small, the misleading information still has some influence on the performance. Moreover, disjoint method performs slightly better than the proposed method at small data size. Though the explanatory variables are chosen to be same for both methods, the misleading information not only make the structure of demand hard to capture, but also make locating the optimal quantile more challenging for integrated method. Therefore, the disjoint method still has advantage in this scenario.
+We first consider misleading DGP model. The data is still generated from ARIMA $(1,0,0)(1,0,0)_4$ model, but two misleading model information are given, AR$(1)$ and ARIMA $(2,0,0)(1,0,0)_4$. To fairly compare performance with those two disjoint model, we use lag term 1 as explanatory variable for the proposed method in first model and lag term 1, 2, 4 as explanatory variable for the proposed method in second model. As in the previous scenario, the error term of the demand follows normal distribution. In this experiment, we use a linear profit function where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$ with target service level $=0.3$. The percentage profit loss of different data size for the misleading model can be seen in Figure \ref{fig:mis}. It is clear that both the disjoint method and our proposed integrated method generate high percentage profit loss in all data size when the misleading model is AR$(1)$. Obviously, short of explanatory variables makes the forecasting less accurate. In the case where misleading model is ARIMA $(2,0,0)(1,0,0)_4$, our forecasting methods can capture the structure when data is sufficient. However, we can see that when data size is small, the misleading information still has some influence on the performance. Moreover, disjoint method performs slightly better than the proposed method at small data size. Though the explanatory variables are chosen to be same for both methods, the misleading information not only make the structure of demand hard to capture, but also make locating the optimal quantile more challenging for integrated method. Therefore, the disjoint method still has advantage in this scenario.
 
 \begin{figure}[ht]
 \centering
@@ -376,7 +376,7 @@ We first consider misleading DGP model, where the data is still generated from A
 \label{fig:mis}
 \end{figure}
 
-Furthermore, we explore the behavior of our proposed method in the scenario where the error term is misspecified. Particularly, we generate our data from ARIMA $(1,0,0)(1,0,0)_4$ with error term follows Laplace$(0,141)$. Therefore, the mean and variance will be as same as $\mathcal{N}(0,200^2)$. As before, we assume that the model of the data generating process is known, and the underlying profit function is linear where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$. However, we fail to know the true distribution of the error term, and still assume it follows normal distribution $\mathcal{N}(0,200^2)$. As presented in Figure \ref{fig:err}, both the proposed method and the disjoint method can still managed to achieve relative low percentage profit loss when learning data is abundant. However, it is worth noticing that the proposed method converge to the target service level 0.3, yet the disjoint method fail to do so and yield a unsatisfied result. This phenomenon suggests an evidence that the disjoint method rely strongly on the correctness of obtaining underlying distribution, while the proposed method is more flexible. 
+Furthermore, we explore the behavior of our proposed method in the scenario where the error term is misspecified. Particularly, we generate our data from ARIMA $(1,0,0)(1,0,0)_4$ with error term follows Laplace$(0,141)$. Therefore, the mean and variance will be as same as $\mathcal{N}(0,200^2)$. As before, we assume that the model of the data generating process is known, and the underlying profit function is linear where $p=20$, $v=10$, $c_h=-3$, $c_s=-7$. However, we fail to know the true distribution of the error term, and still assume it follows normal distribution $\mathcal{N}(0,200^2)$. As presented in Figure \ref{fig:err}, both the proposed method and the disjoint method can still managed to achieve relative low percentage profit loss when learning data is abundant. However, it is worth noticing that the proposed method converges to the target service level 0.3, yet the disjoint method fails to do so and yields a unsatisfied result. This phenomenon suggests an evidence that the disjoint method rely strongly on the correctness of obtaining underlying distribution, while the proposed method is more flexible. 
 
 \begin{figure}[ht]
 \centering
@@ -400,7 +400,7 @@ This paper presents the framework of a new integrated approach to NVPs. The meth
 
 We illustrate and compare the proposed method with conventional disjoint method in computational experiments. As expected, the proposed method can achieve as same level of performance as disjoint method in classic NVPs, while provides marvelous results when the scenario become complicated. The results of experiment also backup our proof on the transformation property between proposed method and quantile regression in the linear profit function case. Besides, the proposed method behaves well in the nonlinear profit function case where the quantile regression is no longer functional.
 
-For future research, more scenarios of experiment should be considered and tested. Only a few particular examples are used in our paper. In order to provide more robust conclusion, more examples in each scenario are also requested. Moreover, it is interested to consider using a nonlinear form of regression model to estimate the order quantity.
+For future research, more scenarios of experiment should be considered and tested since only a few particular examples are used in our paper. In order to provide more robust conclusion, more examples in each scenario are also requested. Moreover, it is interested to consider using a nonlinear form of regression model to estimate the order quantity.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printbibliography
 
