--- a/main_file.tex
+++ b/main_file.tex
@@ -279,6 +279,15 @@ We see that all four methods converge to the desired target of 0.3 as the data l
 \label{fig:sl0.3}
 \end{figure}
 
+Figure
+
+\begin{figure}[ht]
+\centering
+\caption{Fill rate vs. data size at 0.3 target service level}
+\includegraphics{linear-norm-plot_files/figure-latex/}
+\label{fig:sl0.3}
+\end{figure}
+
 Table \ref{tab:size_effect0.3} shows the full results for a target of 0.3.
 As one might expect, the average fill rate follows a similar pattern to
 the service level. Moreover, the fill rate is very high for all methods
