--- a/main_file.tex
+++ b/main_file.tex
@@ -279,20 +279,16 @@ We see that all four methods converge to the desired target of 0.3 as the data l
 \label{fig:sl0.3}
 \end{figure}
 
-Figure
+Figure \ref{fig:fr0.3} represents the average fill rate. As one might expect, the average fill rate follows a similar pattern to the service level. Moreover, the fill rate is very high for all methods and all data sizes. 
 
 \begin{figure}[ht]
 \centering
 \caption{Fill rate vs. data size at 0.3 target service level}
-\includegraphics{linear-norm-plot_files/figure-latex/}
-\label{fig:sl0.3}
+\includegraphics{linear-norm-plot_files/figure-latex/fr-3.pdf}
+\label{fig:fr0.3}
 \end{figure}
 
 Table \ref{tab:size_effect0.3} shows the full results for a target of 0.3.
-As one might expect, the average fill rate follows a similar pattern to
-the service level. Moreover, the fill rate is very high for all methods
-and all data sizes.\footnote{{\bf It might be better to present the fill rate
-in the same way that we presented the average loss and service level. At the moment, it looks a bit strange.}}\\
 
 \begin{table}[ht]
 \caption{Size effect at 0.3 target service level}
