--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -280,9 +280,10 @@ mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
 colnames(mac)<-c("DGP", "DJ","QR","CF")
 par(omd=c(0, 1-w, 0, 1))
-matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
-        ,ylab = 'fill rate')
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n'
+        ,xlab = 'data length',ylab = 'fill rate')
 axis(1, at=1:5, labels=x_axis)
+axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
 
@@ -302,9 +303,10 @@ mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
 colnames(mac)<-c("DGP", "DJ","QR","CF")
 par(omd=c(0, 1-w, 0, 1))
-matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n',xlab = 'data length'
         ,ylab = 'fill rate')
 axis(1, at=1:5, labels=x_axis)
+axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
 
@@ -324,10 +326,11 @@ mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
 colnames(mac)<-c("DGP", "DJ","QR","CF")
 par(omd=c(0, 1-w, 0, 1))
-matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",xlab = 'data length'
+matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n',xlab = 'data length'
         ,ylab = 'fill rate')
 abline(h=0.3,lty=2,col='black')
 axis(1, at=1:5, labels=x_axis)
+axis(2, at=pretty(y_axis), lab=paste0(pretty(y_axis) * 100, "%"), las=TRUE)
 legend(par('usr')[2], par('usr')[4], bty='n', xpd=NA
        ,c("DGP", "DJ","QR","PM"), pch=1:4,col=1:4)
 ```
