--- a/main_file.tex
+++ b/main_file.tex
@@ -279,7 +279,7 @@ We see that all four methods converge to the desired target of 0.3 as the data l
 \label{fig:sl0.3}
 \end{figure}
 
-Figure \ref{fig:fr0.3} represents the average fill rate. As one might expect, the average fill rate follows a similar pattern to the service level. Moreover, the fill rate is very high for all methods and all data sizes. 
+Figure \ref{fig:fr0.3} represents the average fill rate. As one might expect, the average fill rate follows a similar pattern to the service level. Moreover, the fill rate is very high for all methods and all data sizes. The full results for a target of 0.3 can be found in Table \ref{tab:size_effect0.3}.
 
 \begin{figure}[ht]
 \centering
@@ -287,8 +287,6 @@ Figure \ref{fig:fr0.3} represents the average fill rate. As one might expect, th
 \includegraphics{linear-norm-plot_files/figure-latex/fr-3.pdf}
 \label{fig:fr0.3}
 \end{figure}
-
-Table \ref{tab:size_effect0.3} shows the full results for a target of 0.3.
 
 \begin{table}[ht]
 \caption{Size effect at 0.3 target service level}
