--- a/linear norm plot.Rmd
+++ b/linear norm plot.Rmd
@@ -280,6 +280,7 @@ mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
 colnames(mac)<-c("DGP", "DJ","QR","CF")
 par(omd=c(0, 1-w, 0, 1))
+par(mgp = c(3.3, 1, 0))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n'
         ,xlab = 'data length',ylab = 'fill rate')
 axis(1, at=1:5, labels=x_axis)
@@ -303,6 +304,7 @@ mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
 colnames(mac)<-c("DGP", "DJ","QR","CF")
 par(omd=c(0, 1-w, 0, 1))
+par(mgp = c(3.3, 1, 0))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n',xlab = 'data length'
         ,ylab = 'fill rate')
 axis(1, at=1:5, labels=x_axis)
@@ -326,6 +328,7 @@ mac<-t(mac)
 rownames(mac)<-c('40','120','480','1200','4800')
 colnames(mac)<-c("DGP", "DJ","QR","CF")
 par(omd=c(0, 1-w, 0, 1))
+par(mgp = c(3.3, 1, 0))
 matplot(mac, type = c("b"),pch=1:4,col = 1:4,xaxt = "n",yaxt = 'n',xlab = 'data length'
         ,ylab = 'fill rate')
 abline(h=0.3,lty=2,col='black')
