--- a/main_file.tex
+++ b/main_file.tex
@@ -432,7 +432,7 @@ This paper presents the framework of a new integrated approach to NVPs. The meth
 
 We illustrate and compare the proposed method with conventional disjoint method in computational experiments. As expected, the proposed method can achieve as same level of performance as disjoint method in classic NVPs, while provides marvelous results when the scenario become complicated. The results of experiment also backup our proof on the transformation property between proposed method and quantile regression in the linear profit function case. Besides, the proposed method behaves well in the nonlinear profit function case where the quantile regression is no longer functional.
 
-For future research, more scenarios of experiment should be considered and tested since only a few particular examples are used in our paper. In order to provide more robust conclusion, more examples in each scenario are also requested. Moreover, it is interested to consider using a nonlinear form of regression model to estimate the order quantity.
+For future research, more scenarios of experiment should be considered and tested since only a few particular examples are used in our paper. In order to provide more robust conclusion, more examples in each scenario are also requested. Moreover, it is interesting to consider using a nonlinear form of regression model to estimate the order quantity.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printbibliography
 
