--- a/main_file.tex
+++ b/main_file.tex
@@ -430,9 +430,9 @@ Furthermore, we explore the behavior of our proposed method in the scenario wher
 \section{Concluding Remarks} \label{se:end}
 This paper presents the framework of a new integrated approach to NVPs. The method is flexible, and doesn't make assumptions about demand distribution nor the solution of profit function. It could generate stable outcomes even in the case we possess misleading information or make wrong assumptions.
 
-We illustrate and compare the proposed method with conventional disjoint method in computational experiments. As expected, the proposed method can achieve as same level of performance as disjoint method in classic NVPs, while provides marvelous results when the scenario become complicated. The results of experiment also backup our proof on the transformation property between proposed method and quantile regression in the linear profit function case. Besides, the proposed method behaves well in the nonlinear profit function case where the quantile regression is no longer functional.
+We illustrate and compare the proposed method with conventional disjoint method in computational experiments. As expected, the proposed method can achieve as same level of performance as disjoint method in classic NVPs, while generates marvelous results when the scenario become complicated. Specifically, in the case we possess misleading information, our proposed method performs well, while the disjoint method converge to the wrong target. Besides, the proposed method behaves well in the nonlinear profit function case where the quantile regression is no longer functional. It takes less learning data for the proposed method to converge to target than for the disjoint method. The results of experiment also backup our proof on the transformation property between proposed method and quantile regression in the linear profit function case.
 
-For future research, more scenarios of experiment should be considered and tested since only a few particular examples are used in our paper. In order to provide more robust conclusion, more examples in each scenario are also requested. Moreover, it is interesting to consider using a nonlinear form of regression model to estimate the order quantity.
+For future research, it is interesting to consider using a nonlinear form of regression model to estimate the order quantity. Besides, this paper only considers the retailing of single product. In future study, multi-product case can be considered, along with the substitution effect and more.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \printbibliography
 
